[package]
name = "analyze-coros"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
object = { version = "0", default-features = false, features = ["read"] }
gimli = "0"
anyhow = "1"
memmap2 = "0"
tabled = "0"
owo-colors = { version = "4", features = ["supports-colors"] }
